src/App.css
/* Setup start */
a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:'';content:none}table{border-collapse:collapse;border-spacing:0}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration,input[type=search]::-webkit-search-results-button,input[type=search]::-webkit-search-results-decoration{-webkit-appearance:none;-moz-appearance:none}input[type=search]{-webkit-appearance:none;-moz-appearance:none;-webkit-box-sizing:content-box;-moz-box-sizing:content-box;box-sizing:content-box}textarea{overflow:auto;vertical-align:top;resize:vertical}audio,canvas,video{display:inline-block;max-width:100%}audio:not([controls]){display:none;height:0}[hidden]{display:none}html{font-size:100%;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%}a:focus{outline:thin dotted}a:active,a:hover{outline:0}img{border:0;-ms-interpolation-mode:bicubic}figure{margin:0}form{margin:0}fieldset{border:1px solid silver;margin:0 2px;padding:.35em .625em .75em}legend{border:0;padding:0;white-space:normal}button,input,select,textarea{font-size:100%;margin:0;vertical-align:baseline}button,input{line-height:normal}button,select{text-transform:none}button,html input[type=button],input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer}button[disabled],html input[disabled]{cursor:default}input[type=checkbox],input[type=radio]{box-sizing:border-box;padding:0}input[type=search]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}textarea{overflow:auto;vertical-align:top}table{border-collapse:collapse;border-spacing:0}button,html,input,select,textarea{color:#222}::-moz-selection{background:#b3d4fc;text-shadow:none}::selection{background:#b3d4fc;text-shadow:none}img{vertical-align:middle}fieldset{border:0;margin:0;padding:0}textarea{resize:vertical}.chromeframe{margin:.2em 0;background:#ccc;color:#000;padding:.2em 0}

.clearfix:after {visibility: hidden; display: block; font-size: 0; content: ''; clear: both; height: 0; }

* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }

.visuallyHidden:not(:focus):not(:active) { position: absolute; width: 1px; height: 1px; margin: -1px;border: 0;padding: 0;white-space: nowrap;clip-path: inset(100%);clip: rect(00 0 0);overflow: hidden;}

.skip-link {color: black; background: white; position: absolute; left: -1000px; top: 5px; z-index: 999;}

.skip-link:focus {left: 0;}

.sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}

/* Setup end */


/* colors: 
darkBlue: rgba(40, 48, 68, 0.851)  OR 
lightBlue: rgb(120,161,187)  OR   #78a1bb


/* Basic styles start */
  * {
    transition: 0.4s all ease;
  }

  p {
    font-size: 1rem;
    font-family: 'Muli', sans-serif;
    line-height: 1.2rem;
    margin: 0.5rem 0;
  }

  body {
    background: #BFA89E;
    color: #EBF5EE;
    font-size: 125%;
    font-family: 'Muli', sans-serif;
    height: 100vh;
    overflow: hidden;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
  }

  a {
    color: inherit;
    text-decoration: none;
  }

  a:hover, 
  button:hover, 
  .flickListItem button, 
  .queryContent button:hover {
    border: 1px solid #E49273;
    color: #E49273;
  }

  ul {
    list-style: none;
  }

  button {
    background: inherit;
    border: 1px solid #EBF5EE;
    color: #EBF5EE;
    font-size: 1rem;
    padding: 0.5rem;
    text-transform: uppercase;
  }

  button:focus {
    border: 2px solid #E49273;
    box-shadow: 2px 2px 2px #E49273;
    color: #E49273;
  }

  h1,
  h2,
  h3 {
    color: #EBF5EE;
    font-family: 'Muli', sans-serif;
    font-weight: 300;
  }

  h1 {
    font-size: 5.3rem;
    letter-spacing: 0.5rem;
    text-transform: uppercase;
  }

  h2 {
    font-size: 2rem;
  }

  h3 {
    font-size: 1.8rem;
  }

  img {
    display: block;
    width: 100%;
  }

  .wrapper {
    margin: 0 auto;
    max-width: 1280px;
    width: 85%;
  }

  .flexCol, 
  header, 
  .helpContents, 
  .queryList, 
  .flickListItem, 
  .randomChoice {
    align-items: center;
    display: flex;
    flex-direction: column;
  }
/* Basic styles end */


/* App.js styles start */

  /* Header styles start */

    header {
      width: 600px;
    }

    h1 {
      border-bottom: 2px solid #EBF5EE;
      margin: 2rem 0 0.5rem;
    }
    
    .headerDown {
      margin-top: 250px;
    }

    .headerUp {
      margin-top: 0;
    }

    .hamburger {
      background-color: inherit;
      border: none;
      font-size: 2rem;
      position: absolute;
      right: 34px;
      top: 20px;
      z-index: 2;
    }

    .hamburger:hover {
      border: none;
    }

    .white {
      color: #EBF5EE;
    }

    .hamburger span {
      font-size: 1rem;
      height: 25px;
      padding: 1px 1px 1px 0;
      position: absolute;
      top: -9px;
      text-align: center;
      width: 25px;
    }

    .relative {
      position: relative
    }
  /* Header styles end */


  /* Main styles start */

  main {
    height: 70vh;
    overflow: hidden;
  }

  .flex {
    display: flex;
  }

    /* Help section start */

      .showHelp {
        background-color: inherit;
        border: none;
        font-size: 2rem;
        position: absolute;
        right: -30px;
        top: 20px;
      }

      .showHelp:hover {
        border: none;
        transform: scale(1.1);
      }

      .helpContents {
        background: #EBF5EE;
        border: 2px solid rgba(40, 48, 68, 0.851);
        color:rgba(40, 48, 68, 0.851);
        justify-content: center;
        left: 50%;
        height: 200px;
        margin: 5px 0;
        padding: 5px;
        position: absolute;
        margin-left: -400px;
        margin-top: -100px;
        text-align: center;
        top: 50%;
        width: 800px;
      }
    /* Help section end */

    /* Form section Start */
      form {
        height: 70px;
        margin: 5px 0;
        padding: 5px 0;
      }

      .formButton {
        float: right;
        height: 100%;
        width: 100px;
      }

      .formInput {
        border: 1px solid #EBF5EE;
        border-right: 0;
        height: 100%;
        padding: 2px 2px 2px 10px;
        width: 500px;
      }
    /* Form section end */

    /* Film search list section start */
      .queryList {
        height: inherit;
        overflow: scroll;
        width: 700px;
      }

      .error {
        background: rgba(40, 48, 68, 0.851);
        padding: 25px;
        text-align: center;
        width: 600px;
      }

      img {
        text-align: center;
      }

      .queryItem {
        background: rgba(40, 48, 68, 0.851);
        border: none;
        color: #EBF5EE;
        display: flex;
        margin: 10px 0 10px;
        min-width: 600px;
        padding: 0;
        width: 80%;
      }

      .queryContent {
        display: flex;
        height: 240px;
        flex: 3 1 70%;
        flex-direction: column;
        margin: 15px 15px 0 15px;
        overflow: hidden;
        text-align: left;
        text-overflow: ellipsis;
        white-space: normal;
      }

      .overviewBox {
        height: 50%;
        overflow: scroll;
      }

      .queryContent button {
        border: 1px solid #EBF5EE;
        margin-top: 25px;
        padding: 10px 15px;
      }
    
      .queryItem:hover {
        filter: drop-shadow(8px 8px 10px rgb(22, 21, 21));
      }

      .queryItem .imgContainer {
        flex: 1 1 30%;
        min-width: 150px;
      }

    /* Film search list section end */

    /* Your flicks (FlickList.js) section start */
      .menuTop {
        background: rgba(40, 48, 68, 0.851);
        border: none;
        color: #EBF5EE;
        height: 100px;
        position: fixed;
        width: inherit;
        text-align: center;
      }

      .menuTop h2 {
        margin-top: 60px;
      }

      aside {
        background-color: #EBF5EE;
        position: fixed;
        height: 100vh;
        overflow: scroll;
        right: -500px;
        transition: 1s ease all;
        width: 300px;
        z-index: 1;
      }

      .userList li:first-child {
        margin-top: 100px;
      }

      .userList li:last-child {
        margin-bottom: 50px;
      }

      .flickListItem {
        margin-top: 5px;
        padding: 5px;
      }

      .flickListItem h3 {
        border-bottom: 1px solid #283044;
        color: #283044;
        margin: 5px 0;
        text-transform: uppercase;
      }

      .flickListItem img {
        width: 80%;
      }

      .flickListItem button {
        background: rgba(40, 48, 68, 0.851);
        border: 1px solid rgba(40, 48, 68, 0.851);
        color: #EBF5EE;
        width: 80%;
      }

      .flickListItem button:hover {
        border: 1px solid #E49273;
        color: #E49273; 
      }

      .randomize {
        background: rgba(40, 48, 68, 0.851);
        border: none;
        bottom: 0;
        color: #EBF5EE;
        height: 50px;
        position: fixed;
        width: inherit;
      }

      .showList {
        right: 0
      }
    /* Your flicks (FlickList.js) section end */

    /* Random Choice starts */
      .randomChoice {
        background: rgba(40, 48, 68, 0.851);
        display: flex;
        height: 200px;
        left: 50%;
        margin-top: -100px;
        margin-left: -300px;
        padding: 25px 25px 10px 25px;
        position: absolute;
        top: 50%;
        width: 600px;
        z-index: 10;
      }

      .randomChoice h4 {
        font-size: 2rem;
      }

      .randomChoice button {
        margin-top: 15px;
      }

    /* Random Choice ends */


/* MEDIA QUERIES START */

@media (max-width: 900px) {
  h1 {
    font-size: 3.5rem;
  }

  .headerUp {
    margin-top: 50px;
  }

  .helpContents {
    width: 400px;
    left: 50%;
    margin-left: -200px;
  }

  .formInput {
    width: 330px;
  }

  .error {
    width: 430px;
  }
}

@media (max-width: 700px) {
  .queryItem {
    min-width: auto;
    width: 60%;
  }

  .queryContent {
    height: 200px;
  }
}

@media (max-width: 600px) {
  aside {
    width: 100%;
    right: -600px;
  }

  .error {
    width: 300px;
  }

  .queryItem {
    flex-direction: column;
  }

  .queryContent {
    flex: auto;
  }

  .queryContent button {
    margin-top: 15px;
  }

  .flickListItem img {
    width: 40%;
  }

  .flickListItem button {
    width: 40%;
  }
}

@media (max-width: 600px) {
  h1 {
    font-size: 2.2rem;
  }

  .helpContents {
    width: 300px;
    margin-left: -150px;
  }

  .formInput {
    width: 200px;
  }

  .queryItem {
    min-width: auto;
    width: 43%;
  }

  .queryContent {
    height: 200px;
  }
}

